# emails-extractor

./: .gitignore  OPTIMIZATION_LOG.md  README.md  config.yaml  email_extractor.py  exp.ipynb  repro_issue.py
smart-job-tracker/: Dockerfile  MODEL_ENHANCEMENTS.md  config.yaml  docker-compose.yml  download_model.py  download_smollm3.py  inspect_db.py  migrate_now.py  pyproject.toml  report.docx  run_app.py
smart-job-tracker/.streamlit/: config.toml
smart-job-tracker/app/: models.py  ui.py
smart-job-tracker/app/core/: config.py  constants.py  database.py  logging.py
smart-job-tracker/app/services/: extractor.py  gmail.py  merge.py  milestone_migration.py  processor.py  report.py  sync.py
smart-job-tracker/app/ui/: main.py
smart-job-tracker/migrations/: env.py
smart-job-tracker/migrations/versions/: 02e47c378f13_initial_migration.py  3af44128e270_add_interview_assessment_and_offer_.py  3ea6fdbe2709_add_milestone_flags_to_jobapplication.py  49ad2d9860ea_add_pending_to_applicationstatus.py  4ad32d28cac1_add_communication_to_applicationstatus_.py  4bd68282763f_sync_models_with_database.py  620102bf9550_add_sender_and_closing_details_to_.py  8041dd8a065b_sync_jobapplication_model.py  98bdae101f73_add_email_date_column.py  9b394b58e344_add_email_id_to_jobapplication.py  a1b2c3d4e5f6_add_job_description_and_documents.py  a96af85729d6_add_companyemail_table.py  cdeec9e51d36_rename_email_closing_to_summary.py  (+2 more)
smart-job-tracker/tests/: conftest.py  test_extractor.py  test_models.py  test_processor.py  test_processor_advanced.py  test_report.py
(+5 files in other folders)
